# dharma_chatbot

./: .gitignore  Makefile  README.md  airtable_pdfs.py  prototype.py  prototype_langchain.py  pyproject.toml
data/: Rob_Burbea_Transcripts.2023-12-31.csv
data/md/: book.md  book_meta.json
data/md/marker/: part1_meta.json
data/md_marker/: part2_meta.json
experiments/: dataset.py
