[tool.poetry]
name = "dharma-chatbot"
version = "0.1.0"
description = ""
authors = ["gsajko <grzegorz.sajko@protonmail.com>"]
readme = "README.md"
packages = [{include = "dharma_chatbot"}]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
torch="2.1.2" # for sentence-transformers
# ^^ version fixed to prevent downloading other 
chromadb = "0.4.21"
huggingface-hub = "^0.20.1"
llama-index = "^0.9.23"
modal = "^0.56.4437"
unstructured = "^0.11.8"
markdown = "^3.5.1"

[tool.poetry.group.experimental.dependencies] 
pyvespa = "^0.39.0"
langchain = "^0.0.352"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
ruff = "^0.1.8"
ipykernel = "^6.27.1"
langchainhub = "^0.1.14"


[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data/fuel_data
  )/
)
'''
[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


